--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -75,7 +75,17 @@
     "NAME": "Название Авто",
     "MODEL": "Модель",
     "PRICE": "Цена",
-    "ADD": "Добавить"
+    "FURTH": "Далее",
+    "RELEASE": "Выпуск",
+    "KPP": "Коробка Передач",
+    "DVIGATEL": "Двигатель",
+    "MESTA": "Места",
+    "ADD": "Добавить",
+    "UPLOAD": "Добавить Фотографии",
+    "SELECT": "Выберите фотографии, которые будут использоваться в качестве демонстрации автомобиля на странице.",
+    "CHOOSE": "Выбрать",
+    "MAIN": "Основное Фото",
+    "INFORMATION": "Подробные Фотографии"
   }
 }
 
