--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -25,7 +25,9 @@
     "TITLESEC": "Для дальнейшего отслеживания статуса заказа.",
     "TITLEFIR": "Необходимо ввести данные для регистрации учетной записи",
     "TITLEFOR": "Или введите существующие данные",
-    "SUBMIT": "Далее"
+    "SUBMIT": "Далее",
+    "MYORDER": "Мои Заказы",
+    "REGISTR": "Регистрация"
   },
   "ADD": {
     "ENTER": "Введите паспортные данные для заказа автомобиля",
@@ -57,10 +59,11 @@
     "BACK": "Вернуться на админ панель",
     "CREATE": "Создать",
     "TITLE": "Создать Админа",
-    "TITLESEC": "Введите данные для создания администратора"
+    "TITLESEC": "Введите данные для создания администратора",
+    "CARS": "Список Автомобилей"
   },
   "USER": {
-    "TITLE": "Лист заказа",
+    "TITLE": "Лист заказов",
     "NAME": "Имя:",
     "SURNAME": "Фамилия:",
     "BIRTHDAY": "Дата Рождения: ",
@@ -86,6 +89,18 @@
     "CHOOSE": "Выбрать",
     "MAIN": "Основное Фото",
     "INFORMATION": "Подробные Фотографии"
+  },
+  "CARLIST": {
+    "DANGER": "Поврежден",
+    "WARNING": "Недоступно",
+    "DELETE": "Удалить"
+  },
+  "REGISTR": {
+    "REGISTR": "Регистрация",
+    "EXISTS": "Пользователь существует",
+    "CONFIRM": "Подтверждение пароля",
+    "PASSINVALID": "Пароли не совпадают",
+    "BACK": "Вернуться на страницу авторизации"
   }
 }
 
